RESOLVED FIXED314980
[WPE] WPE/TestWebKitWebView:/webkit/WebKitWebView/snapshot constantly fails in WPE legacy mode
https://bugs.webkit.org/show_bug.cgi?id=314980
Summary [WPE] WPE/TestWebKitWebView:/webkit/WebKitWebView/snapshot constantly fails i...
Claudio Saavedra
Reported 2026-05-17 09:46:09 PDT
.
Attachments
Claudio Saavedra
Comment 1 2026-05-17 09:47:17 PDT
EWS
Comment 2 2026-05-17 11:54:41 PDT
Committed 313379@main (1b2f28930b98): <https://commits.webkit.org/313379@main> Reviewed commits have been landed. Closing PR #65065 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.