[WPE] WPE/TestWebKitWebView:/webkit/WebKitWebView/snapshot constantly fails in WPE legacy mode https://bugs.webkit.org/show_bug.cgi?id=314980

Reviewed by Adrian Perez de Castro.

The default size of the view is 800x600 while the test expects 1024x768.
Update the default size and skip the resize test as it doesn't work with
the legacy API.

* Tools/TestWebKitAPI/Tests/WebKit/WKPage/glib/TestWebKitWebView.cpp:
(testWebViewSnapshot):
* Tools/TestWebKitAPI/glib/WebKitGLib/TestMain.h:
(Test::createWebViewBackend):

Canonical link: https://commits.webkit.org/313379@main